tests/snapshots/formats__pvr__etc1.pvr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ etc1.pvr — 8×8, ETC1, 1 MIP level  [0x0+0x63]
  ▾ Header — ETC1  [0x0+0x34]
      Version: 0x3525650  [0x0+0x4]
      Flags: 0x0 []  [0x4+0x4]
      Pixel format: 0x6 — ETC1  [0x8+0x8]
      Color space: Linear RGB (0x0)  [0x10+0x4]
      Channel type: Unsigned byte, normalized (0x0)  [0x14+0x4]
      Height: 8  [0x18+0x4]
      Width: 8  [0x1c+0x4]
      Depth: 1  [0x20+0x4]
      Surfaces: 1  [0x24+0x4]
      Faces: 1  [0x28+0x4]
      MIP-map count: 1  [0x2c+0x4]
      Metadata size: 15  [0x30+0x4]
  ▾ Metadata  [0x34+0xf]
      Orientation — x: right, y: down, z: in  [0x34+0xf]
  ▾ Texture data — 1 MIP level, 32 bytes  [0x43+0x20]
      MIP level 0 — 8×8, 32 bytes  [0x43+0x20]
