tests/snapshots/formats__pvr__rgba8888.pvr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ rgba8888.pvr — 2×2, r8g8b8a8, sRGB, 1 MIP level  [0x0+0x44]
  ▾ Header — r8g8b8a8  [0x0+0x34]
      Version: 0x3525650  [0x0+0x4]
      Flags: 0x2 [PREMULTIPLIED]  [0x4+0x4]
      Pixel format: 0x808080861626772 — r8g8b8a8  [0x8+0x8]
      Color space: sRGB (0x1)  [0x10+0x4]
      Channel type: Unsigned byte, normalized (0x0)  [0x14+0x4]
      Height: 2  [0x18+0x4]
      Width: 2  [0x1c+0x4]
      Depth: 1  [0x20+0x4]
      Surfaces: 1  [0x24+0x4]
      Faces: 1  [0x28+0x4]
      MIP-map count: 1  [0x2c+0x4]
      Metadata size: 0  [0x30+0x4]
  ▾ Texture data — 1 MIP level, 16 bytes  [0x34+0x10]
      MIP level 0 — 2×2, 16 bytes  [0x34+0x10]
