tests/snapshots/formats__pvr__sips.pvr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ sips.pvr — 16×16, PVRTC 4bpp RGB, 1 MIP level  [0x0+0xb4]
  ▾ Header — PVRTC 4bpp RGB  [0x0+0x34]
      Version: 0x3525650  [0x0+0x4]
      Flags: 0x0 []  [0x4+0x4]
      Pixel format: 0x2 — PVRTC 4bpp RGB  [0x8+0x8]
      Color space: Linear RGB (0x0)  [0x10+0x4]
      Channel type: Unsigned byte, normalized (0x0)  [0x14+0x4]
      Height: 16  [0x18+0x4]
      Width: 16  [0x1c+0x4]
      Depth: 1  [0x20+0x4]
      Surfaces: 1  [0x24+0x4]
      Faces: 1  [0x28+0x4]
      MIP-map count: 1  [0x2c+0x4]
      Metadata size: 0  [0x30+0x4]
  ▾ Texture data — 1 MIP level, 128 bytes  [0x34+0x80]
      MIP level 0 — 16×16, 128 bytes  [0x34+0x80]
