tests/snapshots/formats__pvr__tex.pvr.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ tex.pvr — 8×8, DXT1, 1 mipmaps  [0x0+0x54]
    Version: 0x3525650  [0x0+0x4]
    Flags: 0x0  [0x4+0x4]
    Pixel format: DXT1 (0x7)  [0x8+0x8]
    Colour space: linear RGB (0x0)  [0x10+0x4]
    Channel type: 0  [0x14+0x4]
    Height: 8  [0x18+0x4]
    Width: 8  [0x1c+0x4]
    Depth: 1  [0x20+0x4]
    Surfaces: 1  [0x24+0x4]
    Faces: 1  [0x28+0x4]
    Mipmaps: 1  [0x2c+0x4]
    Metadata size: 0  [0x30+0x4]
    Texture data  [0x34+0x20]
